<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="11"
    android:orientation="vertical" 
    android:background="@android:color/white">
    
    <!-- fuction:title bar --> 
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.95"
        android:weightSum="10"
        android:background="@drawable/data_manager_title_bar"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent"
            />
	    <TextView 
	        android:textSize="25.0dip" 
			android:layout_width="0dp" 
			android:layout_weight="8.0"
			android:layout_height="match_parent" 
			android:textColor="@color/baise"
			android:id="@+id/mgr_static_title_id"
			android:gravity="center_vertical"
		/> 
	    <!-- table print bt -->
		<Button
		    android:layout_width="0dp" 
		    android:layout_weight="1.3"
			android:layout_height="match_parent" 
		    android:textSize="25sp"
		    android:id="@+id/stas_print_bt"
			android:text="统计表打印"    
		    android:background="@drawable/btn_create_bg"
		/>
    </LinearLayout>
    <ScrollView 
      	android:layout_width="match_parent"
   		android:layout_height="0dp"
   		android:layout_weight="10.05"
   		android:id="@+id/stat_scrollview"
      	>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    >  	
    <LinearLayout 
	    android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_gravity="center"
	   	android:orientation="horizontal"
	   	android:layout_marginTop="10dip">
		<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stas_project_title"
	        android:textSize="25sp"
		    android:textColor="@android:color/black"/>
	   	<LinearLayout 
	   	    android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:orientation="vertical"
	   	    >
	   	    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/stas_project_name"
		        android:textSize="25sp"
		        android:textColor="@android:color/black"/>
		    <View 
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:background="@android:color/black"
		        android:visibility="visible"/>
	   	</LinearLayout>
	</LinearLayout> 
   <!-- table title --> 
   <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stas_table_title"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="15dip"
        android:textColor="@android:color/black"/>
   
 	<LinearLayout 
	    android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
	   	android:weightSum="15"
	   	android:orientation="horizontal"
	   	>
	   	<TextView 
	   	    android:layout_width="0dp"
	   	    android:layout_weight="1"
	   	    android:layout_height="match_parent"
	   	    />
	   	<LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="14"
		   	android:layout_height="wrap_content"
		   	android:orientation="horizontal"
	        >
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/stas_eng_name_text"
		        android:text="@string/stas_eng_name"
		        android:textSize="20sp"
		        android:textColor="@android:color/black"/>
		    <LinearLayout 
		        android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:orientation="vertical"
		        >
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/stas_eng_name"
			        android:textSize="20sp"
			        android:textColor="@android:color/black"/>
		        
			    <View 
				    android:layout_width="match_parent"
				    android:layout_height="1dip"
			        android:background="@android:color/black"
			        android:visibility="visible"/>
		    </LinearLayout>
	    </LinearLayout>
    </LinearLayout>
   
    <!-- start mileage and end mileage --> 
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:weightSum="15"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="5dip"
		>
	    <TextView 
	        android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="match_parent"
	        />
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="7"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal">
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/stas_start_mileage_text"
		        android:text="@string/stas_start_mileage"
		        android:textSize="20sp"
		        android:textColor="@android:color/black"/>
		    <LinearLayout 
		        android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:orientation="vertical"
		        >
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/stas_start_mileage_value"
			        android:textSize="20sp"
			        android:textColor="@android:color/black"/>
			    <View 
				    android:layout_width="match_parent"
				    android:layout_height="1dip"
			        android:background="@android:color/black"
			        android:visibility="visible"/>
		    </LinearLayout>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="7"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	>
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/stas_end_mileage_text"
		        android:text="@string/stas_end_mileage"
		        android:textSize="20sp"
		        android:textColor="@android:color/black"/>
			<LinearLayout 
		        android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:orientation="vertical"
		        >			
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/stas_end_mileage_value"
			        android:textSize="20sp"
			        android:textColor="@android:color/black"/>
			    <View 
				    android:layout_width="match_parent"
				    android:layout_height="1dip"
			        android:background="@android:color/black"
			        android:visibility="visible"/>
			</LinearLayout>    
	    </LinearLayout>
	</LinearLayout>
	
   	<!-- table -->
   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:weightSum="922"
   	    android:orientation="horizontal"
        android:layout_marginTop="20dp"
   	    >
   	  	<TextView 
   	  	    android:layout_width="0dp"
   	  	    android:layout_weight="10"
        	android:layout_height="match_parent"
   	  	    />
	   	<View
	        android:layout_width="0dp"
	        android:layout_weight="902"
	        android:layout_height="1dp"
	        android:background="@android:color/black"
	        android:visibility="visible"/>  
   	</LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
   	    android:layout_height="50dp"
   	    android:weightSum="922"
   	    android:orientation="horizontal">
	   	<TextView 
   	  	    android:layout_width="0dp"
   	  	    android:layout_weight="10"
        	android:layout_height="match_parent"
   	  	    />
	    <!-- 置筋类型 -->
        <View 
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="180"
            android:layout_height="match_parent"
            android:text="置筋类型"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
			android:textColor="@android:color/black"/>
		<!-- 置筋型号 -->
        <View 
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="150"
            android:layout_height="match_parent"
            android:text="置筋型号"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
			android:textColor="@android:color/black"/>
       <!-- 设计置筋数量-->
        <View 
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="180"
            android:layout_height="match_parent"
            android:text="设计置筋数量(根)"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
			android:textColor="@android:color/black"/>
       <!-- 设计置筋长度 -->
        <View 
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="180"
            android:layout_height="match_parent"
            android:text="设计置筋长度(米)"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
			android:textColor="@android:color/black"/>  	
        <!-- 备注 -->
        <View 
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="203"
            android:layout_height="match_parent"
            android:id="@+id/title_remark"
            android:text="备注"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
			android:textColor="@android:color/black"/>
       <View 
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
    </LinearLayout>     
	
   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:weightSum="922"
   	    android:orientation="horizontal"
   	    >
   	  	<TextView 
   	  	    android:layout_width="0dp"
   	  	    android:layout_weight="10"
        	android:layout_height="match_parent"
   	  	    />
	   	<View
	        android:layout_width="0dp"
	        android:layout_weight="902"
	        android:layout_height="1dp"
	        android:background="@android:color/black"
	        android:visibility="visible"/>  
   	</LinearLayout> 
       
	<!-- function:table list      -->        
   	<com.ysdata.steelarch.view.CustomListView 
   	    android:orientation="vertical"
		android:divider="@android:color/black"
	    android:layout_width="wrap_content"   
        android:layout_height="wrap_content" 
	    android:listSelector="@android:color/transparent"
	    android:descendantFocusability="afterDescendants"
	    android:id="@+id/anchor_stastic_table_lv"/>
	  
 <!--    <View
        android:layout_width="1059dp"
        android:layout_height="1.5px"
       	android:layout_marginLeft="100dip"
        android:background="@android:color/black"
        android:visibility="visible"/>  -->
       
    <!-- 合计 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
       	android:weightSum="922"
    	android:orientation="horizontal">
	   	<TextView 
   	  	    android:layout_width="0dp"
   	  	    android:layout_weight="10"
        	android:layout_height="match_parent"
   	  	    />
		<!-- 型号 -->
        <View 
            android:layout_width="0dp"
   	  	    android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        <TextView 
            android:layout_width="0dp"
   	  	    android:layout_weight="331.5"
            android:layout_height="match_parent"
            android:text="合计"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
			android:textColor="@android:color/black"/>
       <!-- 设计根数-->
        <View 
            android:layout_width="0dp"
   	  	    android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        <TextView 
            android:layout_width="0dp"
   	  	    android:layout_weight="180"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:id="@+id/sum_design_anchor_amount"
			android:textColor="@android:color/black"/>
       <!-- 设计数量 -->
        <View 
            android:layout_width="0dp"
   	  	    android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
        
		<RelativeLayout 
            android:layout_width="0dp"
   	  	    android:layout_weight="180"
            android:layout_height="match_parent"
            >
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:textSize="20sp"
	            android:layout_gravity="center_vertical"
	            android:gravity="center"
	            android:id="@+id/sum_design_anchor_length"
				android:textColor="@android:color/black"/>
			<LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:weightSum="2"
	            android:orientation="horizontal"
	            >
		        <Button 
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:layout_height="match_parent"
			        android:id="@+id/sum_confirm_bt"
			        android:textSize="12sp"
			        android:text="确定"
			        android:visibility="gone"
			         />   
			    <Button 
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:layout_height="match_parent"
			        android:id="@+id/sum_cancel_bt"
			        android:textSize="12sp"
			        android:text="取消"
			        android:visibility="gone"
			         /> 
	        </LinearLayout>
		</RelativeLayout>        

		<!-- 备注 -->
        <View 
            android:layout_width="0dp"
   	  	    android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
  
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_weight="203"
            android:layout_height="match_parent"
            >
	       <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:textSize="20sp"
	            android:layout_gravity="center_vertical"
	            android:gravity="center"
	            android:id="@+id/sum_remark"
				android:textColor="@android:color/black"/>
	        <EditText
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/sum_remark_et"
		        android:textSize="12sp"
		        android:textColor="@android:color/black"
		        android:visibility="gone"/>
	    </RelativeLayout> 
        
       <View 
            android:layout_width="0dp"
   	  	    android:layout_weight="1.5"
            android:layout_height="match_parent"
        	android:background="@android:color/black"
        	android:visibility="visible"/>
    </LinearLayout>     
   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginBottom="20dp"
   	    android:weightSum="922"
   	    android:orientation="horizontal"
   	    >
   	  	<TextView 
   	  	    android:layout_width="0dp"
   	  	    android:layout_weight="10"
        	android:layout_height="match_parent"
   	  	    />
	   	<View
	        android:layout_width="0dp"
	        android:layout_weight="902"
	        android:layout_height="1dp"
	        android:background="@android:color/black"
	        android:visibility="visible"/>  
   	</LinearLayout>
    </LinearLayout> 
    </ScrollView>  
</LinearLayout>